Updated cardcontainer and fixed vertical align on rightclusters.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /** Styles for Odin Landing Page Project
 God help me this will be hard, but fun. **/
+
 * {
     border: 1px red solid;
 }
@@ -11,7 +12,7 @@ body {
 }
 
 img {
-    width: 300px;
+    width: 400px;
     height: auto;
 }
 
@@ -20,6 +21,13 @@ ul {
     margin: 0;
     list-style: none;
     display: flex;
+    gap: 2em;
+}
+
+a {
+    text-decoration: none;
+    color: #E5E7EB;
+    font-size: 18px;
 }
 
 button {
@@ -34,9 +42,9 @@ button {
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-content: center;
-    padding: 16px;
+    padding: 2em;
 }
 
 .hero, .cta {
@@ -57,8 +65,18 @@ button {
 }
 
 .rightcluster {
+    display: flex;
+    flex-flow: row wrap;
     justify-content: center;
     align-content: center;
+}
+
+.clusterrestirct {
+    width: 28em;
+}
+
+.hero {
+    padding: 5em;
 }
 
 .contentheader {
@@ -78,8 +96,8 @@ button {
 
 .card {
     margin: 16px;
-    max-width: 12em;
-    max-height: 12em;
+    width: 12em;
+    height: 12em;
     flex-shrink: 0;
 }
 
@@ -102,8 +120,13 @@ button {
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-end;
-    align-content: space-around;
+    align-content:center;
     padding: 2em 14em;
+}
+
+.quote p {
+    padding: 0;
+    margin: 0;
 }
 
 .footer {
